--- a/collated/main/A0139177W.md
+++ b/collated/main/A0139177W.md
@@ -3,8 +3,6 @@
 ``` java
     public static final String MESSAGE_RECUR_FAILURE = "Both the start and due dates cannot be empty "
             + "with a recur status present.";
-
-}
 ```
 ###### \java\seedu\ezdo\commons\util\MultipleIndexCommandUtil.java
 ``` java
@@ -165,10 +163,6 @@ public class SelectCommand extends Command {
         return parsedDate;
     }
 ```
-###### \java\seedu\ezdo\logic\parser\DateParser.java
-``` java
-}
-```
 ###### \java\seedu\ezdo\logic\parser\ParserUtil.java
 ``` java
     /**
@@ -270,6 +264,9 @@ public class SelectCommand extends Command {
 ```
 ###### \java\seedu\ezdo\model\ModelManager.java
 ``` java
+    /**
+     * Toggles the select status of the tasks in {@code toggleSelect}
+     */
     @Override
     public boolean toggleTasksSelect(ArrayList<Task> tasksToToggle) {
         int firstElement = 0;
@@ -416,6 +413,9 @@ public class Recur {
 ```
 ###### \java\seedu\ezdo\model\util\SampleDataUtil.java
 ``` java
+/**
+ * Provides the sample data for the application.
+ */
 public class SampleDataUtil {
 
     private static final String MESSAGE_DUPLICATE_TASKS = "Sample data cannot contain duplicate tasks";
@@ -484,6 +484,9 @@ public class SampleDataUtil {
 ```
 ###### \java\seedu\ezdo\ui\CommandBox.java
 ``` java
+    /**
+     * Executes the command input by the user.
+     */
     @FXML
     public void handleCommandInputChanged() {
         // reset command text field color if it is changed.
