--- a/collated/main/A0139177W.md
+++ b/collated/main/A0139177W.md
@@ -465,6 +465,7 @@ public class SampleDataUtil {
         }
     }
 
+    /** Retrieves sample ezDo **/
     public static ReadOnlyEzDo getSampleEzDo() {
         try {
             EzDo sampleEzDo = new EzDo();
@@ -474,7 +475,8 @@ public class SampleDataUtil {
             throw new AssertionError(MESSAGE_DUPLICATE_TASKS, e);
         }
     }
-
+    
+    /** Adds sample tasks in sample ezDo **/
     private static void addTasksInSampleEzDo(EzDo sampleEzDo) throws DuplicateTaskException {
         for (Task sampleTask : getSampleTasks()) {
             sampleEzDo.addTask(sampleTask);
